--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avalon-loader",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "keywords": [
     "avalon.js",
     "avalon",
@@ -14,7 +14,10 @@
     "test": "eslint lib --quiet"
   },
   "eslintConfig": {
-    "extends": "mo"
+    "extends": "eslint:recommended",
+    "env": {
+      "node": true
+    }
   },
   "maintainers": [ {
     "name": "LiPinghai",
@@ -46,7 +49,10 @@
     "babel-preset-es2015": "^6.9.0"
   },
   "devDependencies": {
-    "eslint": "^3.15.0",
-    "eslint-config-mo": "^0.2.0"
+    "eslint": "^3.15.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LiPinghai/avalon-loader.git"
   }
 }
